objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Product2.Manufacturer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maunfacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maunfacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Manufacturer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Maunfacturer)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>ATM processing fee company</description>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Columbus Data</fullName>
                </value>
                <value>
                    <fullName>Switch Commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Fill_Date__c</fullName>
        <label>Next Scheduled Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Cassettes__c</fullName>
        <description>Number of cassettes for a redemption unit</description>
        <label># of Cassettes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Live_Date__c</fullName>
        <label>Original Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Number</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Purchase_Order__c.Purchase_Order__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parts</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Lifetime_Meter__c</fullName>
        <label>Previous Lifetime Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Printer_Type__c</fullName>
        <label>Printer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Axes</fullName>
                </value>
                <value>
                    <fullName>Futurelogic Gen 5 Printer</fullName>
                </value>
                <value>
                    <fullName>Gen2 Future Logic Universal</fullName>
                </value>
                <value>
                    <fullName>Gen3 Future Logic Universal</fullName>
                </value>
                <value>
                    <fullName>Icage</fullName>
                </value>
                <value>
                    <fullName>Ithica Epic 950</fullName>
                </value>
                <value>
                    <fullName>Muthagoose</fullName>
                </value>
                <value>
                    <fullName>Nanoptix Paycheck</fullName>
                </value>
                <value>
                    <fullName>TruePoint</fullName>
                </value>
                <value>
                    <fullName>TruePoint Card</fullName>
                </value>
                <value>
                    <fullName>TruePoint TiTo</fullName>
                </value>
                <value>
                    <fullName>Ithaca</fullName>
                    <isActive>false</isActive>
                    <label>Ithaca</label>
                </value>
                <value>
                    <fullName>Transact</fullName>
                    <isActive>false</isActive>
                    <label>Transact</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Cash_In__c</fullName>
        <label>Prior Cash In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>A free form value. Should Match the Microsoft Dynamics GP (Great Plains) Number.</description>
        <inlineHelpText>Should Match the Microsoft Dynamics GP (Great Plains) Number.</inlineHelpText>
        <label>Purchase Order Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT_Count__c</fullName>
        <formula>IF(AND((RecordType.Name =&quot;Redemption&quot;),(NOT(ISBLANK( VGT_Live_Date__c )))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT_SAS_IP_Address__c</fullName>
        <label>RT SAS/IP Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Cases__c</fullName>
        <description>The number of cases in the last 10 days on this asset.</description>
        <inlineHelpText>The number of cases in the last 10 days on this asset. Populated by a record triggered flow.</inlineHelpText>
        <label>Recent Cases</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption ID</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Redemption ID (COAM))</relationshipLabel>
        <relationshipName>RedemptionCOAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redemption_Model__c</fullName>
        <label>Redemption Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_Serial__c</fullName>
        <label>Redemption Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refurbished_Date__c</fullName>
        <label>Refurbished Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Lock_Set_Installed__c</fullName>
        <label>Region Lock Set Installed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Chicagoland</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Manager_Region__c</fullName>
        <formula>TEXT(Account.RM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relaunch_Count__c</fullName>
        <formula>IF(AND( RecordTypeId =&quot;0121I000000W9x0&quot;,(OR( VGT_Live_Date__c &gt;= DATE(2021,01,15),(NOT(ISBLANK( Relaunch_Date__c )))))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relaunch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relaunch_Date__c</fullName>
        <label>Relaunch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remote_G2S_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote G2S Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAS__c</fullName>
        <label>SAS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Needs Parts</fullName>
                </value>
                <value>
                    <fullName>Waiting for IGB Agent</fullName>
                </value>
                <value>
                    <fullName>Pending Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>The Date the Asset will be shipped. Added for IR / Software project.</description>
        <inlineHelpText>The date the asset will be shipped.</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <description>Added for IR - Software.. was told these needed to be free text and could not be a PL.</description>
        <label>Ship Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Record__c</fullName>
        <formula>&quot;/lightning/r/&quot;&amp;Id&amp;&quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftwareV1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Software( with Filters)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset.Parent.Id</field>
                <operation>equals</operation>
                <value>02i1I000003YkkqQAC</value>
            </filterItems>
            <filterItems>
                <field>Asset.Account.Id</field>
                <operation>equals</operation>
                <value>0011I00001CKkO4QAL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Software( with Filters))</relationshipLabel>
        <relationshipName>Assets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_Lookup_Dayna__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Software Lookup - Dayna</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Asset.Parent.Id</field>
                <operation>equals</operation>
                <value>02i1I000003YkkqQAC</value>
            </filterItems>
            <filterItems>
                <field>Asset.Account.Id</field>
                <operation>equals</operation>
                <value>0011I00001CKkO4QAL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Software Lookup - Dayna)</relationshipLabel>
        <relationshipName>Assets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_PriorValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Software PriorValue</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Software PriorValue)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_Type__c</fullName>
        <description>Not sure if this yet.. per the IR project.</description>
        <inlineHelpText>Not sure if this yet.. per the IR project.</inlineHelpText>
        <label>Software Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Upgraded_Date__c</fullName>
        <label>Software Upgraded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Gameset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Software</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TID__c</fullName>
        <label>Assigned ATM TID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teletonika__c</fullName>
        <label>Teletonika</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempOrigAccount__c</fullName>
        <label>TempOrigAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempOrigAcctId__c</fullName>
        <label>TempOrigAcctId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempOrigSerial__c</fullName>
        <label>TempOrigSerial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_ID__c</fullName>
        <label>Unit ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VGT_Connection_Status__c</fullName>
        <label>VGT Connection Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Initializing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_Live_Date__c</fullName>
        <label>VGT Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VGT_Machine__c</fullName>
        <inlineHelpText>Upload a picture of the VGT machine for reference.</inlineHelpText>
        <label>VGT Machine</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VGT_Or_Redemption__c</fullName>
        <formula>IF(
OR(
RecordTypeId=&apos;0122F0000008gw3&apos;,
RecordTypeId=&apos;0122F0000008gvj&apos;
),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VGT Or Redemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VGT_Status_Last_Updated__c</fullName>
        <label>VGT Status Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vault_Levels_Last_Updated__c</fullName>
        <label>Vault Levels Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Account filtered by Record Type of Vendors.</description>
        <inlineHelpText>This field reflects Vendor Accounts. Any values that display immediately are recently viewed Vendors. To search, type at least the first 2 characters of the Vendor Name and hit enter or the search icon.</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Vendor must be an Account with a record type of &apos;Vendors.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendors</value>
            </filterItems>
            <infoMessage>Vendor much be an Account of Recordtype &apos;Vendors&apos; .</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Vendor)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cabinets__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>IGT 1.3</fullName>
                </value>
                <value>
                    <fullName>IGT 1.4</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 1</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 2</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 3</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 4</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 5</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 6 - Non-Premium</fullName>
                </value>
                <value>
                    <fullName>WMS Game Set 6 - Premium</fullName>
                </value>
                <value>
                    <fullName>WMS Penn Premium</fullName>
                </value>
                <value>
                    <fullName>Spielo SPI_69.5.23.0</fullName>
                </value>
                <value>
                    <fullName>Spielo SPI_IL_69.6.20.2, SPI_IL_69.6.22.1</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 4</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 5 - Non Premium</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 4*</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 5*</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 5 - Non-Premium</fullName>
                </value>
                <value>
                    <fullName>Bally Suite 5 - Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WF_Update__c</fullName>
        <label>WF Update</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <formula>InstallDate +  Warranty_Timeframe__c * 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Timeframe__c</fullName>
        <label>Warranty Timeframe (years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X01_Fill_Level__c</fullName>
        <label>$.01 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X05_Fill_Level__c</fullName>
        <label>$.05 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Week_HPD__c</fullName>
        <label>12-Week HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Fill_Level__c</fullName>
        <label>$1 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>forceupdate__c</fullName>
        <description>Use this field as a backend way to update sas positions on account if uploads or processes fail</description>
        <label>forceupdate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Model__c</columns>
        <columns>Software__c</columns>
        <columns>ASSET.RECORDTYPE</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>GP_Manufacturer__c</columns>
        <columns>Unit_ID__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>SAS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>CAD_Nebraska</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Cabinet_Type__c</columns>
        <columns>Device_Approval_Number__c</columns>
        <columns>Board_Serial_Number__c</columns>
        <columns>SAS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.CAD</value>
        </filters>
        <label>CAD (Nebraska)</label>
    </listViews>
    <listViews>
        <fullName>COAM_Assets</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>COAM_Position__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>Common_Name__c</columns>
        <columns>ASSET.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.COAM</value>
        </filters>
        <label>COAM Assets</label>
    </listViews>
    <listViews>
        <fullName>Game_Set_Verification_List</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>GP_Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>SAS__c</columns>
        <columns>Software__c</columns>
        <columns>Software_Upgraded_Date__c</columns>
        <columns>Gameset_Verified__c</columns>
        <columns>Common_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VGT_Live_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.VGT</value>
        </filters>
        <filters>
            <field>Gameset_Verified__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Warehouse</value>
        </filters>
        <label>Game Set Verification List</label>
    </listViews>
    <listViews>
        <fullName>Manually_Created_SW_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Item_Content__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Legacy_SW_Serial__c</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Item_Content__c</field>
            <operation>equals</operation>
            <value>Bally V22 Suite 5 Existing Repair ONLY</value>
        </filters>
        <label>Manually Created SW Assets</label>
    </listViews>
    <listViews>
        <fullName>Redemption_List</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Redemption</value>
        </filters>
        <filters>
            <field>GP_Manufacturer__c</field>
            <operation>equals</operation>
            <value>M3T</value>
        </filters>
        <label>Redemption List</label>
    </listViews>
    <listViews>
        <fullName>SW_Assets_Allocated</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Legacy_SW_Serial__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Inventory_Request__c</columns>
        <columns>Item_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </filters>
        <label>SW Assets Allocated</label>
    </listViews>
    <listViews>
        <fullName>SW_Assets_In_Inventory</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Item_Content__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Legacy_SW_Serial__c</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>SW Assets In Inventory</label>
    </listViews>
    <listViews>
        <fullName>SW_Assets_In_Inventorytestr</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Item_Content__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Legacy_SW_Serial__c</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>In Transit Install</value>
        </filters>
        <label>SW Assets In Transit Install</label>
    </listViews>
    <listViews>
        <fullName>SW_Assets_In_Transit_Return</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Item_Content__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Legacy_SW_Serial__c</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>In Transit Return</value>
        </filters>
        <label>SW Assets In Transit Return</label>
    </listViews>
    <listViews>
        <fullName>Software</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>Item_Content__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.PARENT</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Software</value>
        </filters>
        <label>Software</label>
    </listViews>
</CustomObject>